add oracle module to root pom

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
         <module>debezium-core</module>
         <module>debezium-embedded</module>
         <module>debezium-connector-mysql</module>
+        <module>debezium-connector-oracle</module>
         <module>debezium-connector-postgres</module>
         <module>debezium-connector-mongodb</module>
         <module>debezium-connector-sqlserver</module>
